--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: linear-gradient(#663166 0%, #390041 33.33%, #4e1a4e 66.67%, #390041 100%);
+    background: linear-gradient(#da74c9 0%, #bd0570 33.33%, #810362 66.67%, #0c010b 100%);
     height: 100vh;
     display: flex;
     align-items: center;
@@ -27,43 +27,41 @@ body::before {
 }
 
 .container {
-    width: 1200px;
-    height: 600px;
+    width: 80%;
+    height: 80%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-radius: 24px;
-    border: 1px solid #5754db;
+    border: 1px solid #bd0570;
     box-shadow: 4px 4px 20px 0px rgba(1, 8, 14, 0.15);
     background-image: url("img/Ruido.png");
     background-size: 100% 100%;
     position: relative;
 }
 
+
 .container__conteudo {
     display: flex;
     align-items: center;
-    justify-content: center;
-    height: 100%; 
-    width: 100%; 
+    position: absolute;
+    bottom: 0;
 }
 
 .container__informacoes {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    flex: 1;
+    padding: 3rem;
 }
 
 .container__botao {
     border-radius: 16px;
-    background: #1875E8;
+    background: #810362;
     padding: 16px 24px;
     width: 100%;
     font-size: 24px;
     font-weight: 700;
     border: none;
-    margin-top: 16px;
+    margin-top: 2rem;
 }
 
 .container__texto {
@@ -74,18 +72,69 @@ body::before {
     color: #1875E8;
 }
 
+.container__input {
+    width: 100%;
+    height: 72px;
+    border-radius: 16px;
+    background-color: #FFF;
+    border: none;
+    color: #1875E8;
+    padding: 2rem;
+    font-size: 24px;
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+}
+
+.container__botoes {
+    display: flex;
+    gap: 2em;
+}
+
 h1 {
     font-family: 'Chakra Petch', sans-serif;
     font-size: 72px;
+    padding-bottom: 3rem;
 }
 
-h2,
 p,
 button {
     font-family: 'Inter', sans-serif;
 }
 
-h2 {
+.texto__paragrafo {
     font-size: 32px;
     font-weight: 400;
+}
+
+button:disabled {
+    background-color: rgb(175, 149, 171);
+}
+
+@media screen and (max-width: 1250px) {
+
+    h1 {
+        font-size: 50px;
+    }
+
+    .container__botao {
+        font-size: 16px;
+    }
+
+
+    .texto__paragrafo {
+        font-size: 24px;
+    }
+
+    .container__imagem-robo {
+        display: none;
+    }
+
+    .container__conteudo {
+        display: block;
+        position: inherit;
+    }
+
+    .container__informacoes {
+        padding: 1rem
+    }
 }
